[gd_scene load_steps=43 format=3 uid="uid://d3hdy18rgmt4f"]

[ext_resource type="Script" path="res://Scenes/Main/Main.gd" id="1_g460d"]
[ext_resource type="PackedScene" uid="uid://bni8w3a3pcbwn" path="res://addons/emojis-for-godot/EmojiPanel/EmojiPanel.tscn" id="2_5qsdq"]
[ext_resource type="Texture2D" uid="uid://3cbk6gtd8pis" path="res://Assets/Icons/NodesIcons/Sentence.svg" id="2_71o2r"]
[ext_resource type="Texture2D" uid="uid://cpirwf2kaphk0" path="res://Assets/Icons/NodesIcons/Multiple Choice.svg" id="3_1oahl"]
[ext_resource type="PackedScene" uid="uid://bni8w3a3pcbwn" path="res://addons/material-design-icons/icon_finder/IconFinder.tscn" id="3_sf20f"]
[ext_resource type="PackedScene" uid="uid://dqsnkyn3r76m4" path="res://Scenes/RakuNodes/InitNode/InitNode.tscn" id="3_ylrnp"]
[ext_resource type="Texture2D" uid="uid://duc8w81evfnqw" path="res://Assets/Icons/NodesIcons/DiceRoll.svg" id="4_ahyg4"]
[ext_resource type="PackedScene" uid="uid://cifg2nritn8t6" path="res://Scenes/RakuNodes/SentenceNode/SentenceNode.tscn" id="4_j00oc"]
[ext_resource type="PackedScene" uid="uid://b6mcmodpmsacw" path="res://Scenes/RakuNodes/RollDiceNode/DiceRollNode.tscn" id="5_0np2a"]
[ext_resource type="Texture2D" uid="uid://bmfs6iest7723" path="res://Assets/Icons/NodesIcons/Link.svg" id="5_81ruw"]
[ext_resource type="Texture2D" uid="uid://bsfr18fogqxnt" path="res://Assets/Icons/NodesIcons/Condition.svg" id="6_5jqdi"]
[ext_resource type="PackedScene" uid="uid://coq74c18uq3d3" path="res://Scenes/RakuNodes/ChoiceNode/ChoiceNode.tscn" id="6_edf61"]
[ext_resource type="PackedScene" uid="uid://c3t0igg4s2pne" path="res://Scenes/RakuNodes/EndPathNode/EndPathNode.tscn" id="7_fc8uv"]
[ext_resource type="Texture2D" uid="uid://cii2dk8aqnx3m" path="res://Assets/Icons/NodesIcons/Cog.svg" id="7_pyyyb"]
[ext_resource type="Texture2D" uid="uid://kqhi8rimv1go" path="res://Assets/Icons/NodesIcons/Exit.svg" id="8_d2dpg"]
[ext_resource type="PackedScene" uid="uid://b0eo5lvnrwidu" path="res://Scenes/RakuNodes/BridgeNodes/BridgeInNode.tscn" id="8_ewa0n"]
[ext_resource type="Texture2D" uid="uid://dl3u1xdqd3d66" path="res://Assets/Icons/NodesIcons/Event.svg" id="9_0ijkl"]
[ext_resource type="PackedScene" uid="uid://c75iblt2kuvr2" path="res://Scenes/RakuNodes/BridgeNodes/BridgeOutNode.tscn" id="9_e8l47"]
[ext_resource type="PackedScene" uid="uid://dsv566w4evo8b" path="res://Scenes/RakuNodes/ConditionNode/ConditionNode.tscn" id="10_2eyvw"]
[ext_resource type="Texture2D" uid="uid://dia7vp7k000po" path="res://Assets/Icons/NodesIcons/Comment.png" id="10_3huac"]
[ext_resource type="PackedScene" uid="uid://c02gpa5cixyfm" path="res://Scenes/RakuNodes/ActionNode/ActionNode.tscn" id="11_dmuao"]
[ext_resource type="Texture2D" uid="uid://bh1xpymnqcl5d" path="res://Assets/Icons/help_icon.png" id="11_p64xj"]
[ext_resource type="PackedScene" uid="uid://b4ptsysoq7mgm" path="res://Scenes/RakuNodes/CommentNode/CommentNode.tscn" id="12_k13f8"]
[ext_resource type="Texture2D" uid="uid://bl0hk7s0pdeuk" path="res://addons/advanced-text/icons/md.svg" id="12_x3l62"]
[ext_resource type="Texture2D" uid="uid://d2e2kxb6bfi02" path="res://addons/emojis-for-godot/icon.png" id="13_0yqlp"]
[ext_resource type="PackedScene" uid="uid://bwfykyaajuu4i" path="res://Scenes/RakuNodes/EventNode/EventNode.tscn" id="13_yi7g0"]
[ext_resource type="Texture2D" uid="uid://c0mm85a01jrvn" path="res://addons/material-design-icons/nodes/MaterialIcon.svg" id="14_2cg31"]
[ext_resource type="Texture2D" uid="uid://bexlgpgwakbrr" path="res://Assets/Icons/NodesIcons/Arrow02.svg" id="15_3xgpb"]
[ext_resource type="Texture2D" uid="uid://c7vdr4e0mxst6" path="res://Assets/Icons/close_icon.png" id="16_nvvba"]
[ext_resource type="PackedScene" uid="uid://bs6fdfics53ud" path="res://Scenes/Inspector/Inspector.tscn" id="17_j76i2"]
[ext_resource type="PackedScene" uid="uid://cnxiel383ygmn" path="res://Scenes/Windows/GrapNodeSelecter/graph_node_selecter.tscn" id="18_arap7"]
[ext_resource type="Theme" uid="uid://budfhk1hudcfj" path="res://Assets/MainTheme.tres" id="19_c4sc2"]
[ext_resource type="PackedScene" uid="uid://bb3x8klcnp57t" path="res://Scenes/Windows/WelcomeWindow/welcome_window.tscn" id="20_pa5mq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3npb4"]
content_margin_left = 5.0
content_margin_top = 3.0
content_margin_right = 5.0
content_margin_bottom = 3.0
bg_color = Color(0.0862745, 0.101961, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0784314, 0.0862745, 0.0980392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 5.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ao7wf"]
content_margin_left = 5.0
content_margin_top = 3.0
content_margin_right = 5.0
content_margin_bottom = 3.0
bg_color = Color(0.0862745, 0.101961, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 5.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_22xm7"]
content_margin_left = 5.0
content_margin_top = 3.0
content_margin_right = 5.0
content_margin_bottom = 3.0
bg_color = Color(0.0859375, 0.101563, 0.125, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 5.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ux1f6"]
content_margin_left = 0.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 1.0
expand_margin_top = 2.0
expand_margin_right = 1.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knd4m"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.0862745, 0.101961, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r02mm"]
bg_color = Color(0.619608, 0.901961, 0.482353, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_gptd3"]
line_spacing = 0.0
font_size = 12
font_color = Color(0.647059, 0.858824, 0.505882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tyw4k"]
content_margin_left = 7.0
content_margin_right = 7.0
bg_color = Color(0.768627, 0.180392, 0.25098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3psvs"]

[node name="Main" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_g460d")
plugin_emoji_finder = ExtResource("2_5qsdq")
plugin_icon_finder = ExtResource("3_sf20f")
init_node = ExtResource("3_ylrnp")
sentence_node = ExtResource("4_j00oc")
dice_roll_node = ExtResource("5_0np2a")
choice_node = ExtResource("6_edf61")
end_node = ExtResource("7_fc8uv")
bridge_in_node = ExtResource("8_ewa0n")
bridge_out_node = ExtResource("9_e8l47")
condition_node = ExtResource("10_2eyvw")
action_node = ExtResource("11_dmuao")
comment_node = ExtResource("12_k13f8")
event_node = ExtResource("13_yi7g0")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 1440.0
offset_bottom = 740.0
theme_override_constants/separation = 15

[node name="Header" type="HFlowContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 10

[node name="MenuBar" type="MenuBar" parent="MainContainer/Header"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = SubResource("StyleBoxFlat_3npb4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ao7wf")
theme_override_styles/normal = SubResource("StyleBoxFlat_22xm7")
flat = true

[node name="File" type="PopupMenu" parent="MainContainer/Header/MenuBar"]
transparent_bg = true
size = Vector2i(119, 100)
item_count = 3
item_0/text = "Open"
item_1/text = "New"
item_1/id = 1
item_2/text = "Save"
item_2/id = 2

[node name="Add" type="PopupMenu" parent="MainContainer/Header/MenuBar"]
size = Vector2i(119, 100)
item_count = 9
item_0/text = "Sentence"
item_0/icon = ExtResource("2_71o2r")
item_1/text = "Choice"
item_1/icon = ExtResource("3_1oahl")
item_1/id = 1
item_2/text = "DiceRoll"
item_2/icon = ExtResource("4_ahyg4")
item_2/id = 2
item_3/text = "Bridge"
item_3/icon = ExtResource("5_81ruw")
item_3/id = 3
item_4/text = "Condition"
item_4/icon = ExtResource("6_5jqdi")
item_4/id = 4
item_5/text = "Action"
item_5/icon = ExtResource("7_pyyyb")
item_5/id = 5
item_6/text = "EndPath"
item_6/icon = ExtResource("8_d2dpg")
item_6/id = 6
item_7/text = "Event"
item_7/icon = ExtResource("9_0ijkl")
item_7/id = 7
item_8/text = "Comment"
item_8/icon = ExtResource("10_3huac")
item_8/id = 8

[node name="Help" type="PopupMenu" parent="MainContainer/Header/MenuBar"]
size = Vector2i(126, 247)
item_count = 2
item_0/text = "Monologue"
item_0/icon = ExtResource("11_p64xj")
item_1/text = "Markdown"
item_1/icon = ExtResource("12_x3l62")
item_1/id = 1

[node name="VSeparator" type="VSeparator" parent="MainContainer/Header"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_ux1f6")

[node name="SaveBtn" type="Button" parent="MainContainer/Header"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
text = "Save"

[node name="SaveProgressBarContainer" type="MarginContainer" parent="MainContainer/Header"]
layout_mode = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_bottom = 2

[node name="SaveProgressBar" type="ProgressBar" parent="MainContainer/Header/SaveProgressBarContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_knd4m")
theme_override_styles/fill = SubResource("StyleBoxFlat_r02mm")
step = 1.0
rounded = true
show_percentage = false

[node name="SavedNotification" type="Label" parent="MainContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "SAVED"
label_settings = SubResource("LabelSettings_gptd3")
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="MainContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
alignment = 2

[node name="EmojisBtn" type="Button" parent="MainContainer/Header/Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 14
text = "Find Emoji"
icon = ExtResource("13_0yqlp")

[node name="IconsBtn" type="Button" parent="MainContainer/Header/Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 14
text = "Find Material Icon"
icon = ExtResource("14_2cg31")

[node name="EditConfBtn" type="CheckButton" parent="MainContainer/Header/Buttons"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 14
text = "Edit Config"
icon = ExtResource("7_pyyyb")

[node name="TestBtn" type="Button" parent="MainContainer/Header/Buttons"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxFlat_tyw4k")
theme_override_styles/normal = SubResource("StyleBoxFlat_tyw4k")
text = "Test"
icon = ExtResource("15_3xgpb")

[node name="GraphEditsArea" type="Control" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/GraphEditsArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TabBar" type="TabBar" parent="MainContainer/GraphEditsArea/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme_override_icons/close = ExtResource("16_nvvba")
clip_tabs = false
tab_close_display_policy = 1
tab_count = 1
tab_0/title = "+"

[node name="GraphEdits" type="TabContainer" parent="MainContainer/GraphEditsArea/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_3psvs")
clip_tabs = false
tabs_visible = false

[node name="Inspector" parent="MainContainer/GraphEditsArea" instance=ExtResource("17_j76i2")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -408.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 2

[node name="NoInteractions" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="GraphNodeSelector" parent="." instance=ExtResource("18_arap7")]
unique_name_in_owner = true

[node name="FileDialog" type="FileDialog" parent="."]
initial_position = 2
size = Vector2i(778, 450)
theme = ExtResource("19_c4sc2")
access = 2
filters = PackedStringArray("*.json")

[node name="WelcomeWindow" parent="." instance=ExtResource("20_pa5mq")]

[connection signal="id_pressed" from="MainContainer/Header/MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="id_pressed" from="MainContainer/Header/MenuBar/Add" to="." method="_on_add_id_pressed"]
[connection signal="id_pressed" from="MainContainer/Header/MenuBar/Help" to="." method="_on_help_id_pressed"]
[connection signal="pressed" from="MainContainer/Header/SaveBtn" to="." method="save"]
[connection signal="pressed" from="MainContainer/Header/Buttons/EmojisBtn" to="." method="_on_emojis_btn_pressed"]
[connection signal="pressed" from="MainContainer/Header/Buttons/IconsBtn" to="." method="_on_icons_btn_pressed"]
[connection signal="toggled" from="MainContainer/Header/Buttons/EditConfBtn" to="." method="_on_edit_conf_btn_toggled"]
[connection signal="pressed" from="MainContainer/Header/Buttons/TestBtn" to="." method="test_project"]
[connection signal="tab_changed" from="MainContainer/GraphEditsArea/VBoxContainer/TabBar" to="." method="tab_changed"]
[connection signal="tab_close_pressed" from="MainContainer/GraphEditsArea/VBoxContainer/TabBar" to="." method="tab_close_pressed"]
[connection signal="canceled" from="FileDialog" to="." method="_on_file_dialog_canceled"]
